# crawl-planner

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  Dockerfile  Dockerfile.nginx  Dockerfile.osrm-builder  README.md  api_schemas.py  app.js  app.py  docker-compose.prod.yml  docker-compose.yml  download_map.sh  entrypoint.sh  index.html  init-certbot.sh  init-precompute.sh  nginx-dev.conf  nginx-https.conf  nginx.conf  osrm_client.py  planner.py  precompute_distances.py  pyproject.toml  styles.css
.github/: CHECKLIST.md
.github/workflows/: README.md  build-push-docker.yml  deploy.yml
backend/: api_schemas.py  app.py  data.json  models.py  mypy.ini  osrm_client.py  parse.py  planner.py  polyline_utils.py  precompute_distances.py  pyproject.toml  test_phase1_improvements.py
data/: shared_routes.db
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  main.tsx  theme.js
frontend/src/assets/: bristol_boundary.geojson
frontend/src/components/: BottomBar.jsx  BottomBar.tsx  Header.jsx  Header.tsx  Loading.jsx  Loading.tsx  Map.jsx  Map.tsx  Messages.jsx  Messages.tsx  PubRemovalDialog.tsx  ResultsPanel.jsx  ResultsPanel.tsx
frontend/src/hooks/: usePlanState.js  usePlanState.ts
frontend/src/pages/: SharedRoute.tsx
frontend/src/services/: api.js  api.ts
frontend/src/styles/: styles.css
frontend/src/types/: polyline.d.ts
frontend/src/utils/: markerIcons.jsx  markerIcons.tsx  polyline.ts
osrm-profiles/: foot.lua
